--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -9,77 +9,87 @@
    <meta name="keywords" content="web,developer,resume" />
    <meta name="author" content="mon nom">
    <meta name="viewport" content="width=device-width,initial-scale=1">
+   <link rel="stylesheet" href="css/resume.css" />
+
+   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+   <script src="https://use.edgefonts.net/sancreek:n4:all.js"></script>
+
    <!--[if It IE 9]
          <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> <![endif]-->
 </head>
 
 <body>
-   <header>
-      <h1>Najjari Mohamed Hilal</h1>
-      <h2>Master DOSI</h2>
-      <img src="https://i.ytimg.com/vi/lFjWA5w74nY/mqdefault.jpg">
-      <h3>Nom: Najjari</h3>
-      <h3>Pr&eacute;nom: Mohamed Hilal</h3>
-      <h3>Adresse: 2 rue des archives </h3>
-      <h3>Email: Thegan18@gmail.com</h3>
 
 
-      <article>
-         <h2>Pr&eacute;sentation</h2>
-         <p>Bonjour, je m'appelle Najjari Mohamed Hilal,
-            je suis étudiant en Master2 DOSI à UBO.
-            Je suis prêt à commencer ma carrière en sciences
-            informatiques après avoir terminé mon master cette année.</p>
-      </article>
-      <article>
-         <h2>Exp&eacute;riences professionnelles</h2>
-         <p>Realisation d'un system de gestion. </br>
-            Realisation d'un system automatic.
-         </p>
-      </article>
-      <dl>
-         <dt>Comp&eacute;tences:</dt>
-         <dd>Hadoop</dd>
-         <dd>Python</dd>
-         <dd>Mysql</dd>
-         <dd>Oracle</dd>
-         <dd>Neo4j</dd>
-         <section>
-            <h2>Formation</h2>
-            <dl>
-               <dt>2019</dt>
-               <dd>Master2 DOSI</dd>
-               <dt>2018</dt>
-               <dd>Master1 Mobiquité & Big data</dd>
-            </dl>
-         </section>
-         <dt>Langues</dt>
-         <dd></dd>
+
+
+
+
+
+
+
+   <div id="wrapper">
+      <header>
+         <h1>Najjari Mohamed Hilal</h1>
+         <h2>Master DOSI</h2>
+         <img src="https://apprecs.org/ios/images/app-icons/256/7f/1054674559.jpg">
+         <h3>Nom: Najjari</h3>
+         <h3>Pr&eacute;nom: Mohamed Hilal</h3>
+         <h3>Adresse: 2 rue des archives </h3>
+         <h3>Email: Thegan18@gmail.com</h3>
+
+
+         <article>
+            <h2>Pr&eacute;sentation</h2>
+            <p>Bonjour, je m'appelle Najjari Mohamed Hilal,
+               je suis étudiant en Master2 DOSI à UBO.
+               Je suis prêt à commencer ma carrière en sciences
+               informatiques après avoir terminé mon master cette année.</p>
+         </article>
+         <article>
+            <h2>Exp&eacute;riences professionnelles</h2>
+            <p>Realisation d'un system de gestion. </br>
+               Realisation d'un system automatic.
+            </p>
+         </article>
          <dl>
-            <dt>Arabe</dt>
-            <dd>Natale</dd>
-            <dt>Français</dt>
-            <dd>Niveau B2</dd>
-            <dt>Anglais</dt>
-            <dd>Niveau B2</dd>
+            <dt>Comp&eacute;tences:</dt>
+            <dd>Hadoop</dd>
+            <dd>Python</dd>
+            <dd>Mysql</dd>
+            <dd>Oracle</dd>
+            <dd>Neo4j</dd>
+            <section>
+               <h2>Formation</h2>
+               <dl>
+                  <dt>2019</dt>
+                  <dd>Master2 DOSI</dd>
+                  <dt>2018</dt>
+                  <dd>Master1 Mobiquité & Big data</dd>
+               </dl>
+            </section>
+            <dt>Langues</dt>
+            <dd></dd>
+            <dl>
+               <dt>Arabe</dt>
+               <dd>Natale</dd>
+               <dt>Français</dt>
+               <dd>Niveau B2</dd>
+               <dt>Anglais</dt>
+               <dd>Niveau B2</dd>
+
+            </dl>
 
          </dl>
-
-      </dl>
-      <footer>
+         <footer>
             <dt>Facebook: <a href="https://fr-fr.facebook.com/">lien</a></dt>
             <dd>Contactez-moi depuis mon facebook</dd>
             <dt>Github: <a href="">lien</a></dt>
             <dd>Voir mes projets en cours</dd>
-      </footer>
-
-
-
-
-
-
-   </header>
-   <div id="wrapper"></div>
+         </footer>
+      </header>
+      <i class="fas fa-camera-retro"></i>
+   </div>
 </body>
 
 </html>
