--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -10,7 +10,7 @@
    <meta name="author" content="mon nom">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <link rel="stylesheet" href="css/resume.css" />
-
+   <link rel="stylesheet" href="css/responsive.css" />
    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
    <script src="https://use.edgefonts.net/sancreek:n4:all.js"></script>
 
